--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "fishy",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d lib"
+    "build": "babel src -d lib/js",
+    "start": "node ./koaserver/app.js"
   },
   "author": "fishy 506624553@qq.com",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "ejs": "^2.5.8",
+    "koa": "^2.0.0-alpha.8",
+    "koa-router": "^7.1.1",
+    "koa-static": "^4.0.2",
+    "koa-views": "^5.2.1"
   }
 }
