--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "presets": [
-      "es2015"
+      "env"
     ],
-    "plugins": []
+    "plugins": [
+      ["transform-es2015-modules-umd"]
+    ]
   }
