--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "koa-router": "^7.1.1",
     "koa-static": "^4.0.2",
     "koa-views": "^5.2.1",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "karma-babel-preprocessor": "^7.0.0",
+    "karma-phantomjs-launcher": "^1.0.4"
   }
 }
