--- a/package.json
+++ b/package.json
@@ -16,22 +16,24 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "ejs": "^2.5.8",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.1",
-    "koa": "^2.0.0-alpha.8",
-    "koa-router": "^7.1.1",
-    "koa-static": "^4.0.2",
-    "koa-views": "^5.2.1",
-    "selenium-webdriver": "^4.0.0-alpha.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "ejs": "^2.5.8",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
     "karma-babel-preprocessor": "^7.0.0",
-    "karma-phantomjs-launcher": "^1.0.4"
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "koa": "^2.0.0-alpha.8",
+    "koa-router": "^7.1.1",
+    "koa-static": "^4.0.2",
+    "koa-views": "^5.2.1",
+    "selenium-standalone": "^6.14.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "supertest": "^3.0.0"
   }
 }
